--- a/15-directives2/bower.json
+++ b/15-directives2/bower.json
@@ -10,6 +10,7 @@
     "angular": "~1.4.0",
     "bootstrap": "~3.3.4",
     "angular-mocks": "~1.4.0",
-    "components-font-awesome": "~4.3.0"
+    "components-font-awesome": "~4.3.0",
+    "angular-bootstrap": "~0.13.0"
   }
 }
